--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
           <div id="bio">
             <div>
               <p>
-                Hai semua, saya Andy Javadam S, panggil saja saya Andy, saya adalah pelajar dari  <a href="https://g.co/kgs/XJcecw">SMP PGRI 7 BANDUNG</a>.<br>
+                Hai semua, saya Andy Javadam S, panggil saja saya Andy, saya adalah pelajar dari  <a href="https://maps.app.goo.gl/XQzLWDC9o8YwEi8D8">SMA PGRI 2 BANDUNG</a>.<br>
                 Minat saya dalam web development adalah hal yang tidak saya impikan, namun ditahun 2020 saya memiliki keinginan untuk mempelajari dunia coding karena melihat teman saya yang saat itu adalah; Web development, developer app, bug hunter, cyber security, game developer.
               </p>
             </div>
