--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
   				<header>
         <nav>
            <div  class="header_logo">
-                <img src="assets/imgs/zzz.gif" alt="" srcset="">
+                <img src="assets/imgs/z.gif" alt="" srcset="">
             </div>
             <div class="header_links">
                 <ul class="nav_links">
