--- a/about.html
+++ b/about.html
@@ -48,11 +48,14 @@
       <div id="header">
         <img src="assets/imgs/image.jpg">
         <h1>Tentang</h1>
+        <div>
+          <p>
+        </div>
           <div id="bio">
             <div>
               <p>
-                Hai semua, saya Andy Javadam S, panggil saja saya Andy, saya adalah pelajar dari  <a href="https://maps.app.goo.gl/XQzLWDC9o8YwEi8D8">SMA PGRI 2 BANDUNG</a>.<br>
-                Minat saya dalam web development adalah hal yang tidak saya impikan, namun ditahun 2020 saya memiliki keinginan untuk mempelajari dunia coding karena melihat teman saya yang saat itu adalah; Web development, developer app, bug hunter, cyber security, game developer.
+                Hai semua, saya Andy Javadam S, panggil saja saya Andy, saya adalah pelajar dari  <a href="https://maps.app.goo.gl/48gkb3XHm4ELo9Kz6?g_st=ac">SMA PGRI 2 BANDUNG</a>.
+                Jika ditanya suka apa? tentu saya akan menjawab saya menyukai design yang berunsur Retro, makannya web portofolio saya berunsur Retro. Minat saya dalam web development adalah hal yang tidak saya impikan, namun ditahun 2020 saya memiliki kegabutan dikarenakan covid-19 yang kala itu merajalela, saya mencari kegiatan karena 24 jam ada dirumah, akhirnya saya tertarik untuk mempelajari dunia coding karena melihat teman online yang saya kenal digrup WA yang ada di youtube mereka saat itu adalah; Web development, developer app, bug hunter, cyber security, game developer. Namun itu semua tidak saya perdalam karena keterbatasan waktu untuk belajar, sekarang saya mencoba meluangkan waktu walau sedikit untuk mempelajari semua hal tersebut dengan menanyakan sebab akibat dan error yang saya alami dalam proses pembelajaran saya, mungkin saya akan melanjutkan kuliah administrasi karena kata mamah itu gampang, btw gue mah simpel aja orangnya.
               </p>
             </div>
                 <br>
@@ -60,8 +63,8 @@
           
       </div>
     </header>
-    <footer id="connect" class="mdl-mini-footer">
-      <ul id="footer-links" class="mdl-mini-footer__link-list">
+    <footer id="hayolo" class="mdl-mini-footer">
+      <ul id="inihayolo" class="mdl-mini-footer__link-list">
         <li>
           <a href="https://instagram.com/andy.jees">
             <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
