--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/imgs/image.jpg">
     
     <!-- Title -->
-    <title>andyjavadams | simple web</title>
+    <title>andyjavadams | portofolio</title>
 
     <!-- Css -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -24,7 +24,7 @@
     <header>
         <nav>
            <div  class="header_logo">
-                <img src="assets/imgs/zzz.gif" alt="" srcset="">
+                <img src="assets/imgs/zz.gif" alt="" srcset="">
             </div>
             <div class="header_links">
                 <ul class="nav_links">
