--- a/project.html
+++ b/project.html
@@ -6,24 +6,24 @@
     <meta name="robots" content="noindex">
     <title>andyjavadams | project</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <meta name="description" content="Ben Arda Acar bu web sitesinde bağlantı profillerimi paylaşıyorum.">
+    <meta name="description" content="Halo bro, saya Andy.">
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel="canonical" href="https://social.ardacar.com/">
-    <meta property="og:site_name" content="Web App Developer | Arda Acar">
-    <meta name="author" content="Arda Acar, root@ardacar.com">
-    <meta name="publisher" content="Arda Acar">
+    <link rel="canonical" href="">
+    <meta property="og:site_name" content="Web App Developer | Andy">
+    <meta name="author" content="Andy Js, root@ardacar.com">
+    <meta name="publisher" content="Andy Js">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Web App Developer | Arda Acar">
-    <meta property="og:description" content="Ben Arda Acar bu web sitesinde bağlantı profillerimi paylaşıyorum.">
+    <meta property="og:title" content="Web App Developer | Andy Js">
+    <meta property="og:description" content="Halo bro, saya Andy.">
     <meta property="og:url" content="https://social.ardacar.com/">
     <meta property="og:image" content="https://social.ardacar.com/img/wallpaper.png">
     <meta property="og:image:secure_url" content="https://social.ardacar.com/img/wallpaper.png">
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:site" content="@ardacarofficial">
+    <meta property="twitter:site" content="@">
     <meta property="twitter:domain" content="social.ardacar.com">
-    <meta property="twitter:title" content="Web App Developer | Arda Acar">
-    <meta property="twitter:description" content="Ben Arda Acar bu web sitesinde bağlantı profillerimi paylaşıyorum.">
-    <meta property="twitter:creator" content="@ardacarofficial">
+    <meta property="twitter:title" content="Web App Developer | Andy Js">
+    <meta property="twitter:description" content="Halo bro, saya Andy.">
+    <meta property="twitter:creator" content="@">
     <meta property="twitter:image" content="https://social.ardacar.com/img/wallpaper.png">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <link rel="stylesheet" href="assets/css/project.css" type="text/css">
